[package]
name = "crypto-streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
async-tungstenite = "*"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
tungstenite = "0.21.0"
bytes = "1.5.0"
